--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY Studio MN SOFT TECH</title>
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./style.css" rel="stylesheet" />
     <script src="./script.js" defer></script>
   </head>
   <body>
