--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY Studio MN SOFT TECH</title>
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./styles.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="./script.js" defer></script>
   </head>
-  <body>
+  <body class="bg-gray-50">
     <!-- Hero Section -->
     <section id="hero" class="h-screen flex flex-col justify-center items-center text-center bg-gradient-to-r from-blue-500 to-purple-600 text-white">
-      <h1 class="text-6xl font-bold">MY Studio MN SOFT TECH</h1>
-      <p class="mt-4 text-xl">Crafting Innovative Android Solutions</p>
-      <div class="mt-8">
+      <h1 class="text-6xl font-bold animate-fade-in">MY Studio MN SOFT TECH</h1>
+      <p class="mt-4 text-xl animate-fade-in">Crafting Innovative Android Solutions</p>
+      <div class="mt-8 animate-fade-in">
         <button class="bg-white text-blue-600 px-6 py-2 rounded-full mr-4 hover:bg-gray-100">View Projects</button>
         <button class="bg-transparent border border-white px-6 py-2 rounded-full hover:bg-white hover:text-blue-600">Contact Me</button>
       </div>
@@ -20,42 +22,78 @@
 
     <!-- About Section -->
     <section id="about" class="py-20 px-8 flex flex-col md:flex-row items-center">
-      <div class="md:w-1/2">
+      <div class="md:w-1/2 animate-slide-in-left">
         <h2 class="text-4xl font-bold">About Us</h2>
         <p class="mt-4 text-gray-600">
           We are a passionate team of Android developers dedicated to building innovative and user-friendly mobile applications.
         </p>
       </div>
-      <div class="md:w-1/2 mt-8 md:mt-0">
-        <img src="https://via.placeholder.com/500" alt="About Us" class="rounded-lg" />
+      <div class="md:w-1/2 mt-8 md:mt-0 animate-slide-in-right">
+        <img src="https://via.placeholder.com/500" alt="About Us" class="rounded-lg shadow-lg" />
       </div>
     </section>
 
     <!-- Services Section -->
     <section id="services" class="py-20 px-8 bg-gray-100">
-      <h2 class="text-4xl font-bold text-center">Our Services</h2>
+      <h2 class="text-4xl font-bold text-center animate-fade-in">Our Services</h2>
       <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-transform transform hover:scale-105">
           <span class="text-4xl">📱</span>
           <h3 class="text-xl font-bold mt-4">Android App Development</h3>
           <p class="mt-2 text-gray-600">We build high-quality Android apps using Kotlin and Java.</p>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-transform transform hover:scale-105">
           <span class="text-4xl">🌐</span>
           <h3 class="text-xl font-bold mt-4">Cross-Platform App Development</h3>
           <p class="mt-2 text-gray-600">We create cross-platform apps using React Native.</p>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-transform transform hover:scale-105">
           <span class="text-4xl">🎨</span>
           <h3 class="text-xl font-bold mt-4">UI/UX Design</h3>
           <p class="mt-2 text-gray-600">We design beautiful and intuitive user interfaces.</p>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-transform transform hover:scale-105">
           <span class="text-4xl">🔧</span>
           <h3 class="text-xl font-bold mt-4">App Maintenance and Support</h3>
           <p class="mt-2 text-gray-600">We provide ongoing support and maintenance for your apps.</p>
         </div>
       </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="py-20 px-8">
+      <h2 class="text-4xl font-bold text-center animate-fade-in">Our Portfolio</h2>
+      <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-transform transform hover:scale-105">
+          <img src="https://via.placeholder.com/400" alt="Project 1" class="rounded-lg" />
+          <h3 class="text-xl font-bold mt-4">Project 1</h3>
+          <p class="mt-2 text-gray-600">A description of the project.</p>
+        </div>
+        <!-- Add more projects here -->
+      </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="py-20 px-8 bg-gray-100">
+      <h2 class="text-4xl font-bold text-center animate-fade-in">Testimonials</h2>
+      <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-transform transform hover:scale-105">
+          <p class="text-gray-600">"Great work! Highly recommended."</p>
+          <p class="mt-4 font-bold">- Client Name</p>
+        </div>
+        <!-- Add more testimonials here -->
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-20 px-8">
+      <h2 class="text-4xl font-bold text-center animate-fade-in">Contact Us</h2>
+      <form class="mt-8 max-w-lg mx-auto">
+        <input type="text" placeholder="Your Name" class="w-full p-2 mb-4 border rounded-lg" required />
+        <input type="email" placeholder="Your Email" class="w-full p-2 mb-4 border rounded-lg" required />
+        <textarea placeholder="Your Message" class="w-full p-2 mb-4 border rounded-lg" rows="5" required></textarea>
+        <button type="submit" class="bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600">Send Message</button>
+      </form>
     </section>
 
     <!-- Footer -->
