--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY Studio MN SOFT TECH</title>
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./style.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="./script.js" defer></script>
+    <script src="./scripts.js" defer></script>
   </head>
   <body class="bg-gray-50">
     <!-- Hero Section -->
