--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       </div>
     </section>
 
-    <!-- Testimonials Section -->
+  <!-- Testimonials Section -->
 <section id="testimonials" class="py-20 px-8 bg-gray-800">
   <h2 class="text-4xl font-bold text-center animate-fade-in">What Our Clients Say</h2>
   <div class="container mx-auto mt-8 relative overflow-hidden">
     <!-- Testimonials Carousel -->
-    <div id="testimonial-carousel" class="flex transition-transform duration-500 ease-in-out">
+    <div id="testimonial-carousel" class="flex">
       <!-- Testimonial 1 -->
       <div class="min-w-full flex justify-center">
         <div class="bg-gray-700 p-8 rounded-lg shadow-2xl hover:shadow-3xl transition-transform transform hover:scale-105 glass">
